2016-12-08 Fred Gleason <fredg@paravelsystems.com>
	* Changed the value of the delay scan interval from 50 to 10 mS
	in 'src/lwnetrouterd/router_gpio.cpp'.
	* Changed the value of the delay scan interval from 50 to 10 mS
	in 'src/lwnetrouterd/router_cic.cpp'.
	* Changed the value of the delay scan interval from 50 to 10 mS
	in 'src/lwnetrouterd/router_breakaway.cpp'.
2016-12-08 Fred Gleason <fredg@paravelsystems.com>
	* Added a gpio_delay_test(1) test harness in 'src/tests/'.
2016-12-08 Fred Gleason <fredg@paravelsystems.com>
	* Added a fudge-factor in the SetpointBytes() function in
	'src/lwnetrouterd/router_hpiaudio.cpp'.
2016-12-08 Fred Gleason <fredg@paravelsystems.com>
	* Added an audio_delay_test(1) test harness in 'src/tests/'.
2016-12-08 Fred Gleason <fredg@paravelsystems.com>
	* Renamed a variable in 'src/lwnetrouterd/route_hpiaudio.cpp'.
2016-12-08 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked latency parameters in 'src/tests/audio_delay_test.cpp'.
2016-12-08 Fred Gleason <fredg@paravelsystems.com>
	* Incremetned the package version to 0.6.4.
2016-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Removed the hostname from the Software Authority Protocol long
	Source and Destination name fields in
	'src/lwnetrouterd/protocol_sap.cpp'.
2016-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an 'OFF' source in 'src/lwnetrouterd/protocol_sap.cpp'.
2016-12-13 Fred Gleason <fredg@paravelsystems.com>
	* Implemented persistent crosspoint and delay states in
	lwnetrouterd(8).
2016-12-14 Fred Gleason <fredg@paravelsystems.com>
	* Changed 'src/lwnetrouterd/protocol_gpio.cpp' to use the
	'SyGpioServer::gpioReceived()' signal.
2016-12-14 Fred Gleason <fredg@paravelsystems.com>
	* Modified relay processing so as to require a GPIO source to be
	one the list of input IP addresses in lwnetrouter.conf(5).
2016-12-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'CicProgramCode=' directive to the [Outputs] section of
	lwnetrouter.conf(5).