@@ -121,7 +121,7 @@ rm -rf $RPM_BUILD_ROOT
 
 %files gui
 %{_bindir}/lwnetdelay
-%{_datadir}/icons/48x48/apps/lwnetdelay.png
+%{_datadir}/icons/hicolor/48x48/apps/lwnetdelay.png
 %{_datadir}/applications/lwnetdelay.desktop
 %doc conf/lwnetrouter-sample.conf
 
